fixed button being behind nav

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -54,6 +54,8 @@ p {
   box-sizing: border-box;
   text-decoration: none;
   font-weight: 700;
+  z-index: 1;
+  position: relative;
 }
 .button__icon {
   font-size: 2.5rem;
@@ -87,6 +89,7 @@ p {
   justify-content: space-between;
   align-items: center;
   padding: 2.5rem 10%;
+  z-index: 0;
 }
 .nav__part {
   display: flex;
